--- a/onepage/onepage-scroll.css
+++ b/onepage/onepage-scroll.css
@@ -102,42 +102,39 @@ body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
 */
 
 h1.name {
-  position: relative;
-  width: 273px;
-  height: 58px;
-  left: 75%;
-  top: 220px;
-
+  position: fixed;
+  max-width: 100%;
+  left: 70%;
+  top: 20%;
   font-style: normal;
   font-weight: 750;
-  font-size: 48px;
-  line-height: 58px;
+  font-size: 3vw;
   /* identical to box height */
   text-align: right;
 }
 
 .line {
-  position: absolute;
-  width: 104px;
-  height: 0px;
-  left: 84%;
-  top: 350;
+  position: fixed;
+  max-width: 10vw;
+  max-height: 0px;
+  left: 75%;
+  top: 35%;
 
-  border: 2px solid #000000;
+  border: 1px solid #000000;
 }
 
 .titles {
   /* product designer creative technologist illustrator */
 
-  position: absolute;
-  width: 400px;
+  position: fixed;
+  max-width: 100%;
   height: 192px;
   left: 73%;
-  top: 348px;
+  top: 35%;
   font-style: normal;
   font-weight: 350;
-  font-size: 36px;
-  line-height: 64px;
+  font-size: 2vw;
+  line-height: 3vw;
   /* or 178% */
   text-align: right;
 
@@ -231,8 +228,8 @@ h1.name {
   background-size: auto 100%, auto;
   background-position: left;
   margin: 0 20px;
-  width: 100%;
-  height: 600px;
+  max-width: 90%;
+  max-height: 600px;
   z-index: 1;
   box-shadow: 2px 3px 15px 2px #ababab;
 }
@@ -249,11 +246,10 @@ h1.name {
 .timeline-slide__content {
   z-index: 5;
   position: absolute;
-  overflow: auto;
   background: #ffffff;
   width: 30%;
   height: 100%;
-  left: 86%;
+  left: 84%;
   padding: 20px 20px;
   -webkit-transform: translate(-50%, 0px);
           transform: translate(-55%, 0px);
@@ -266,12 +262,13 @@ h5.timeline-slide__content{
   font-size: 18px;
   font-style: "semi-bold";
   position: relative;
+
 }
 
 @media (max-width: 900px) {
   .timeline-slide__content {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     padding: 20px auto;
   }
 }
@@ -288,17 +285,17 @@ h5.timeline-slide__content{
 }
 .timeline-title {
   color: #4c4c4c;
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 1.5vw;
+  line-height: 2vw;
   font-weight: 400;
   font-style: "bold";
 }
 .timeline-text {
-  font-size: 16px;
+  font-size: 1vw;
   width: auto;
   text-align: left;
   position: inherit;
-  line-height: 22px;
+  line-height: 1.5vw;
   padding-right: 20px;
   color: #666666;
 }
@@ -405,7 +402,7 @@ h5.timeline-slide__content{
 
 
 .visuals {
-  width: 50%;
+  max-width: 50%;
   align-content: center;
   display: block;
   position: relative;
@@ -487,18 +484,19 @@ h5.timeline-slide__content{
 }
 
 .resume {
-  font-size: 24pt;
+  position: fixed;
+  font-size: 2vw;
   font-style: "bold";
-  position: absolute;
   text-align: right;
-  top: 70%;
-  left: 84%;
+  top: 60%;
+  left: 78%;
   color: #fff;
 }
 
 .resume:hover{
   color: #c4c4c4;
   transition: color .3s;
+
 }
 
 .link{
@@ -530,7 +528,7 @@ h5.timeline-slide__content{
 
 .two_col .visuals {
   display: table-cell;
-  width: 10%;
+  max-width: 10%;
   justify-content: center;
   align-content: center;
 }
@@ -593,7 +591,7 @@ h5.timeline-slide__content{
 
 .video{
   min-height: 100%;
-  width: 100%;
+  max-width: 100%;
     position: absolute;
   top: 0;
   right: 0;
