--- a/onepage/onepage-scroll.css
+++ b/onepage/onepage-scroll.css
@@ -101,11 +101,17 @@ body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
 /*EVERYTHING BELOW IS CUSTOM
 */
 
-h1.name {
-  position: fixed;
-  max-width: 100%;
-  left: 70%;
+#intro_text {
+  width: 30%;
+  margin: auto;
+  position: absolute;
+  left: 55%;
   top: 20%;
+}
+
+h1.name {
+  position: relative;
+  display: block;
   font-style: normal;
   font-weight: 750;
   font-size: 3vw;
@@ -114,23 +120,21 @@ h1.name {
 }
 
 .line {
-  position: fixed;
-  max-width: 10vw;
-  max-height: 0px;
-  left: 75%;
-  top: 35%;
-
-  border: 1px solid #000000;
+  position: relative;
+  max-width: 100%;
+  max-height: 5px;
+  display: block;
+  margin-left: 310px;
+  margin-bottom: 50px;
+  text-align: right;
 }
 
 .titles {
   /* product designer creative technologist illustrator */
-
-  position: fixed;
+  display: block;
+  position: relative;
   max-width: 100%;
   height: 192px;
-  left: 73%;
-  top: 35%;
   font-style: normal;
   font-weight: 350;
   font-size: 2vw;
@@ -141,6 +145,15 @@ h1.name {
   color: #000000;
 }
 
+
+.resume {
+  position: relative;
+  font-size: 2vw;
+  display: block;
+  font-style: "bold";
+  text-align: right;
+  color: #fff;
+}
 
 .container {
   height: 100%;
@@ -228,7 +241,7 @@ h1.name {
   background-size: 60%, auto;
   background-position: 10% 50%;
   margin: 0 20px;
-  max-width: 90%;
+  max-width: 50%;
   max-height: 600px;
   z-index: 1;
   box-shadow: 2px 3px 15px 2px #ababab;
@@ -244,7 +257,7 @@ h1.name {
   background-position: 50% 15%;
   width: 80%;
   z-index: -30;
-  max-height: 100%
+  min-height: 90%;
   }
 }
 
@@ -553,15 +566,6 @@ i {
   cursor: pointer;
 }
 
-.resume {
-  position: fixed;
-  font-size: 2vw;
-  font-style: "bold";
-  text-align: right;
-  top: 60%;
-  left: 78%;
-  color: #fff;
-}
 
 .resume:hover{
   color: #c4c4c4;
