--- a/onepage/onepage-scroll.css
+++ b/onepage/onepage-scroll.css
@@ -170,6 +170,11 @@ h1.name {
   align-content: center;
 }
 
+@media (max-height: 1000px){
+  .timeline{
+    top: 0;
+  }
+}
 .timeline-nav__item {
   width: auto;
   height: auto;
@@ -250,14 +255,13 @@ h1.name {
 @media (max-width: 900px) {
   .timeline-slide {
   position: relative;
-  overflow-y: auto;
   background-repeat: no-repeat;
   outline: none;
   background-size: 80% auto;
   background-position: 50% 15%;
   width: 80%;
   z-index: -30;
-  min-height: 80%;
+  max-height: 90%;
 
   }
 }
@@ -279,16 +283,26 @@ h1.name {
   position: absolute;
   background: #ffffff;
   width: 30%;
-  max-height: 80%;
+  max-height: 90%;
   left: 84%;
-  padding: 20px 20px;
+  padding: auto;
   -webkit-transform: translate(-50%, 0px);
           transform: translate(-55%, 0px);
-  padding: 20px 20px 20px 20px;
   opacity: 0;
+  margin: auto;
   transition: opacity 1s;
 }
 }
+
+.timeline-title {
+  color: #4c4c4c;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 400;
+  font-style: "bold";
+  margin: 20px 20px 20px 20px;
+}
+
 @media (max-width: 900px) {
 .timeline-slide__content {
   z-index: 100;
@@ -297,13 +311,16 @@ h1.name {
   background: #ffffff;
   width: 100%;
   left: 50%;
-  height: 80%;
+  height: 100%;
   -webkit-transform: translate(-50%, 0px);
           transform: translate(-50%, 0px);
-  margin: 20px 20px 20px 20px;
+  margin: auto;
   opacity: 1;
   transition: opacity 1s;
-  overflow-y: auto;
+ }
+ .timeline-title {
+  margin-bottom: 10px;
+  margin-top: 10px;
  }
 }
 
@@ -316,17 +333,9 @@ h5.timeline-slide__content{
 
 }
 
-.timeline-title {
-  color: #4c4c4c;
-  font-size: 18px;
-  line-height: 20px;
-  font-weight: 400;
-  font-style: "bold";
-  margin: 20px 20px 20px 20px;
-}
 .timeline-text {
   font-size: 12pt;
-  width: 90%;
+  max-width: 100%;
   text-align: left;
   position: absolute;
   line-height: 16pt;
@@ -367,7 +376,7 @@ h5.timeline-slide__content{
   border: 2px solid #000000;
 }
 
-@media (max-height: 900px) {
+@media (max-height: 1000px) {
   #page_title{
     opacity: 0;
   }
