--- a/onepage/onepage-scroll.css
+++ b/onepage/onepage-scroll.css
@@ -168,11 +168,14 @@ h1.name {
   width: 100%;
   position: absolute;
   align-content: center;
+  max-height: 100vh;
+  max-width: 100vw;
 }
 
 @media (max-height: 1000px){
   .timeline{
     top: 0;
+    max-height: 100vh;
   }
 }
 .timeline-nav__item {
@@ -221,6 +224,9 @@ h1.name {
     height: 720px;
     max-height: 920px;
   }
+  .timeline-nav__item{
+    font-size: 3vw;
+  }
 }
 .timeline-slider {
   height: 100%;
@@ -234,8 +240,8 @@ h1.name {
   }
 }
 .timeline .slick-track {
-  height: 100%;
-  margin: 15px auto;
+  max-height: 100%;
+  margin: auto;
 
 }
 .timeline-slide {
@@ -245,10 +251,11 @@ h1.name {
   outline: none;
   background-size: 60%, auto;
   background-position: 10% 50%;
-  margin: 0 20px;
+  margin: 40px 20px;
   max-width: 50%;
-  max-height: 600px;
+  max-height: 90%;
   z-index: 1;
+  top: 50%;
   box-shadow: 2px 3px 15px 2px #ababab;
 }
 
@@ -300,7 +307,9 @@ h1.name {
   line-height: 20px;
   font-weight: 400;
   font-style: "bold";
-  margin: 20px 20px 20px 20px;
+  margin-top: 80px;
+  margin-left: 20px;
+  margin-bottom: 0px;
 }
 
 @media (max-width: 900px) {
@@ -319,8 +328,8 @@ h1.name {
   transition: opacity 1s;
  }
  .timeline-title {
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin: auto;
+  text-align: center;
  }
 }
 
@@ -361,7 +370,7 @@ h5.timeline-slide__content{
 }
 
 #page_title2{
-  position: absolute;
+  position: relative;
   text-align: left;
   left: 5%;
   top: 5%;
@@ -435,6 +444,15 @@ h5.timeline-slide__content{
   cursor: pointer;
   position: absolute;
 }
+
+@media(max-width: 900px){
+  .button {
+    margin: auto;
+    text-align: center;
+    -webkit-transform: translate(50%,50%);
+  }
+}
+
 
 .button:hover {
   background-color: #c4c4c4; /* gray */
@@ -567,14 +585,18 @@ i {
   margin: 10px auto;
 }
 
+
 .side_nav_item:hover {
   color: #e8e8e8;
   transition: color #e8e8e8;
   cursor: pointer;
-
 }
 
-
+@media (max-width: 500px){
+  .side_na_item{
+    top:0;
+  }
+}
 
 .side_nav{
   width: auto ;
@@ -583,9 +605,10 @@ i {
   top: 15%;
   text-align: left;
   margin: 20px auto;
-  position: absolute;
+  position: fixed;
   cursor: pointer;
 }
+
 
 
 .resume:hover{
@@ -694,6 +717,7 @@ i {
   opacity: .8;
 }
 
+
 #landing {
   z-index: 100;
 }
@@ -704,8 +728,8 @@ i {
     top: 0;
     left: 0;
     z-index: 100;
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
     background-color: rgba(192, 192, 192, 1);
     background-image: url("http://i.stack.imgur.com/MnyxU.gif");
     background-repeat: no-repeat;
