--- a/onepage/onepage-scroll.css
+++ b/onepage/onepage-scroll.css
@@ -470,6 +470,8 @@ i {
   padding: 5px;
 }
 
+
+
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
@@ -743,7 +745,14 @@ a.highlight3:hover:before {
   cursor: pointer;
 }
 
-
+.icon{
+  color:#080808;
+  margin: 0px auto;
+  text-decoration: none;
+}
+.icon:hover{
+  color:#c4c4c4;
+}
 
 .resume:hover{
   color: #c4c4c4;
